--- a/appDemo.yml
+++ b/appDemo.yml
@@ -2,3 +2,10 @@ apiName: app-demo-dev
 performance:
   logging:
     enabled:true
+#Authorisationproperties
+authorized:
+  readonlyaccess:
+    channels:
+#Netbank readwrite -user_managerment_admin is added for test purpose
+  readwriteaccess:
+    channels:
